fixed header text alignment

--- a/responsive.css
+++ b/responsive.css
@@ -15,10 +15,10 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        width: 100vw;
+        
         height: 90vh;
-        text-align: center;
-        width: 97vw;
+        /* text-align: center; */
+        width: 95vw;
 
     }
 
@@ -109,7 +109,7 @@
         text-align: center;
         align-items: center;
         height: 80vh;
-        width: 100vw;
+        
         width: 95vw;
 
         flex-direction: column;
@@ -176,7 +176,7 @@
         flex-direction: column;
         align-items: center;
         height: 40vh;
-        width: 100vw;
+        
         width: 95vw;
 
     }
